i update my code

--- a/index.html
+++ b/index.html
@@ -34,5 +34,19 @@
     
 
     </div>
+
+
+
+    <div> <h3>
+ How to push incremental code
+    </h3>
+
+    <ul>
+        <li> git add .</li>
+        <li> git commit -m "add a meaningful message"   
+        <li> git push </li>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
